// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  border-radius: 0.3rem;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  min-height: 8rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: white;
}

.c1 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  color: #292B3E;
}

<div
  class="c0"
>
  <p
    class="c1"
  >
    Hello world
  </p>
</div>
`;

exports[`it works loading 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 0.3rem;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  min-height: 8rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: white;
}

.c1 {
  width: 4rem;
}

.c2 {
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  border-radius: 0.6rem;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  border-style: solid;
  border-radius: 0.6rem;
  border-width: 1px;
  width: 100%;
  height: 0.75rem;
  background-color: #fafafa;
  border-color: #d4d4d4;
}

.c4 {
  position: relative;
  top: -1px;
  left: 0;
  border-radius: 0.6rem;
  width: 1.5rem;
  height: 0.75rem;
  background-color: #d4d4d4;
}

.c5 {
  -webkit-animation: igSzjp;
  animation: igSzjp;
  -webkit-transform: translateX(50%);
  -ms-transform: translateX(50%);
  transform: translateX(50%);
  left: -50%;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-duration: 0.6s;
  animation-duration: 0.6s;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  -webkit-animation-timing-function: cubic-bezier(0.68,-0.9,0.32,1.9);
  animation-timing-function: cubic-bezier(0.68,-0.9,0.32,1.9);
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4 c5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`it works with button 1`] = `
.c0 {
  border-radius: 0.3rem;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  min-height: 8rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: white;
}

.c1 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  color: #292B3E;
}

.c2 {
  border-top-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-width: 4px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 0.75rem;
  padding-top: 0.75rem;
  border-top-color: #fafafa;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: end;
  -ms-flex-pack: end;
  justify-content: end;
  gap: 0.5rem;
}

.c5 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  border-radius: 0.3rem;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #17a3a5;
  color: white;
  border-color: #17a3a5;
}

.c5:hover {
  cursor: pointer;
  background-color: #135f61;
  color: white;
}

.c5:hover:disabled {
  cursor: not-allowed;
  background-color: #135f61;
}

.c5:disabled {
  opacity: 0.7;
  background-color: #135f61;
  color: white;
}

.c4 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.3rem;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #17a3a5;
  color: white;
  border-color: #17a3a5;
}

.c4:hover {
  cursor: pointer;
  background-color: #135f61;
  color: white;
}

.c4:hover:disabled {
  cursor: not-allowed;
  background-color: #135f61;
}

.c4:disabled {
  opacity: 0.7;
  background-color: #135f61;
  color: white;
}

.c6 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0"
>
  <p
    class="c1"
  >
    body
  </p>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <button
        class="c4 sc-bcXHqe c5"
      >
        <div
          class="c6"
        >
          Edit
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`it works with elevation 1`] = `
.c0 {
  border-radius: 0.3rem;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  min-height: 8rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: white;
}

.c1 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  color: #292B3E;
}

<div
  class="c0"
>
  <p
    class="c1"
  >
    Hello world
  </p>
</div>
`;

exports[`it works with elevation 2`] = `
.c1 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  color: #292B3E;
}

.c0 {
  border-radius: 0.3rem;
  box-shadow: 0 2px 4px rgba(0,0,0,0.12),0 10px 13px rgba(0,0,0,0.02),0 -10px 13px rgba(0,0,0,0.02);
  min-height: 8rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: white;
}

<div
  class="c0"
>
  <p
    class="c1"
  >
    Hello world
  </p>
</div>
`;

exports[`it works with elevation 3`] = `
.c1 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  color: #292B3E;
}

.c0 {
  border-radius: 0.3rem;
  box-shadow: 0 2px 5px rgba(0,0,0,0.16),-10px 15px 15px rgba(0,0,0,0.03),10px 0px 15px rgba(0,0,0,0.03);
  min-height: 8rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: white;
}

<div
  class="c0"
>
  <p
    class="c1"
  >
    Hello world
  </p>
</div>
`;

exports[`it works with elevation 4`] = `
.c1 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  color: #292B3E;
}

.c0 {
  border-radius: 0.3rem;
  box-shadow: 0 2px 6px rgba(0,0,0,0.18),-15px 20px 20px rgba(0,0,0,0.04),15px -5px 20px rgba(0,0,0,0.04);
  min-height: 8rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: white;
}

<div
  class="c0"
>
  <p
    class="c1"
  >
    Hello world
  </p>
</div>
`;

exports[`it works with heading 1`] = `
.c0 {
  border-radius: 0.3rem;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  min-height: 8rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: white;
}

.c1 {
  font-size: 1.875rem;
  font-weight: 700;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  margin-bottom: 1rem;
  color: #292B3E;
}

.c2 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  color: #292B3E;
}

<div
  class="c0"
>
  <h2
    class="c1"
  >
    heading
  </h2>
  <p
    class="c2"
  >
    body
  </p>
</div>
`;

exports[`it works with tag 1`] = `
.c0 {
  border-radius: 0.3rem;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  min-height: 8rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: white;
}

.c1 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  color: #292B3E;
}

.c2 {
  border-top-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-width: 4px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 0.75rem;
  padding-top: 0.75rem;
  border-top-color: #fafafa;
}

.c3 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c4 {
  border-style: solid;
  text-align: center;
  font-size: 0.75rem;
  font-weight: 500;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.6rem;
  border-width: 0;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  background-color: #135f61;
  color: white;
  border-color: #292B3E;
}

.c5 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

<div
  class="c0"
>
  <p
    class="c1"
  >
    body
  </p>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <span
        class="c4"
      >
        <span
          class="c5"
        >
          v1.0.0
        </span>
      </span>
    </div>
  </div>
</div>
`;
